Clean up the Sphinx configuration
This commit cleaned up the Sphinx configuration,
and changed all instances of PyGSSAPI to Python-GSSAPI.

--- a/docs/Makefile
+++ b/docs/Makefile
@@ -85,17 +85,17 @@ qthelp:
 	@echo
 	@echo "Build finished; now you can run "qcollectiongenerator" with the" \
 	      ".qhcp project file in $(BUILDDIR)/qthelp, like this:"
-	@echo "# qcollectiongenerator $(BUILDDIR)/qthelp/PyGSSAPI.qhcp"
+	@echo "# qcollectiongenerator $(BUILDDIR)/qthelp/Python-GSSAPI.qhcp"
 	@echo "To view the help file:"
-	@echo "# assistant -collectionFile $(BUILDDIR)/qthelp/PyGSSAPI.qhc"
+	@echo "# assistant -collectionFile $(BUILDDIR)/qthelp/Python-GSSAPI.qhc"
 
 devhelp:
 	$(SPHINXBUILD) -b devhelp $(ALLSPHINXOPTS) $(BUILDDIR)/devhelp
 	@echo
 	@echo "Build finished."
 	@echo "To view the help file:"
-	@echo "# mkdir -p $$HOME/.local/share/devhelp/PyGSSAPI"
-	@echo "# ln -s $(BUILDDIR)/devhelp $$HOME/.local/share/devhelp/PyGSSAPI"
+	@echo "# mkdir -p $$HOME/.local/share/devhelp/Python-GSSAPI"
+	@echo "# ln -s $(BUILDDIR)/devhelp $$HOME/.local/share/devhelp/Python-GSSAPI"
 	@echo "# devhelp"
 
 epub:
