--- a/tox.ini
+++ b/tox.ini
@@ -4,15 +4,18 @@
 # and then run "tox" from this directory.
 
 [tox]
-envlist = py27,py33
+envlist = py27,py33,py34,flake8
 
 [testenv]
 # NB(sross): disabling E225,E226,E227,E901 make pep8 think Cython is ok
 commands =
+    python setup.py nosetests []
+
+[testenv:flake8]
+commands =
     flake8 setup.py
     flake8 gssapi
     flake8 gssapi --filename='*.pyx,*.pxd' --ignore=E225,E226,E227,E901
-    python setup.py nosetests []
 
 deps =
     nose
