Automatically upload checksumed taball on release
This commit instructs Travis to upload a compressed tarball
with the same contents (essentially) as GitHub's compressed tarball.
It also uploads an md5sum for the generated compressed tarball as well.

The upload happens on tags, when the Python version is Python 3.4 and
the krb5 version is 1.13 (this is intended to stay as the latest
published release).  To facilitate this, the KRB5_VER environment
variable was added to each environment in the test matrix.

To ensure that cleanup happens properly, a couple of extra directories
were added to the .gitignore file.

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,18 +4,18 @@ python:
   - "3.4"
 
 env:
-  - KRB5_PPAS="" # 1.10
-  - KRB5_PPAS="sssd/updates" # 1.12
-  - KRB5_PPAS="rharwood/krb5-1.13 sssd/updates" # 1.13
-  - KRB5_PPAS="rharwood/krb5-master sssd/updates" # master
+  - KRB5_PPAS="" KRB5_VER="1.10"
+  - KRB5_PPAS="sssd/updates" KRB5_VER="1.12"
+  - KRB5_PPAS="rharwood/krb5-1.13 sssd/updates" KRB5_VER="1.13"
+  - KRB5_PPAS="rharwood/krb5-master sssd/updates" KRB5_VER="master"
 
 matrix:
   exclude:
     - python: "3.4"
-      env: KRB5_PPAS="" # 1.10
+      env: KRB5_PPAS="" KRB5_VER="1.10"
   include:
     - python: "3.3"
-      env: KRB5_PPAS="sssd/updates" # 1.12
+      env: KRB5_PPAS="sssd/updates" KRB5_VER="1.12"
 
 install:
   - "sudo sed -i '1i 127.0.0.1 test.box' /etc/hosts"
@@ -27,3 +27,17 @@ install:
   - "pip install -r test-requirements.txt"
 
 script: sh .travis.sh
+
+before_deploy: sh .travis.before-deploy.sh
+deploy:
+  provider: releases
+  api_key:
+    secure: U8RPR6liglI4J8MOSEyK9uxvSFRMcCkKLflpIFKcpUFg+PUuK85YtRdOOL/L/pifat9/KvoF7OJEMNTQjoYAhziMu8GGsiPZlkFzXNiy54FxTTtgprkhllRK7nw/jK/hopKM01goKVaUL860aU+KdpfStRTaAy8ZGEj13jwOMYU=
+  file:
+    - tag_build/${TRAVIS_TAG}.md5sum
+    - tag_build/${TRAVIS_TAG}.tar.gz
+  on:
+    repo: pythongssapi/python-gssapi
+    tags: true
+    python: "3.4"
+    condition: "$KRB5_VER = '1.13'"
