New krb5-1.13 should run all tests from master
There will still be five failing tests which require greet_client and so will
not work.  However, since they will also fail in master, there is no need to
test master at the present time.

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ env:
   - KRB5_VER="1.10"
   - KRB5_VER="1.12"
   - KRB5_VER="1.13"
-  - KRB5_VER="master"
+  # - KRB5_VER="master"
 
 matrix:
   exclude:
